# gw2-arbitrage

./: .versionrc  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  release.toml
.github/: CODEOWNERS
.github/workflows/: rust.yml
changelog/: commit.hbs  header.hbs  template.hbs
src/: api.rs  config.rs  crafting.rs  gw2efficiency.rs  item.rs  lib.rs  main.rs  money.rs  profit.rs  recipe.rs  request.rs  tests.rs
tests/: profit.rs
