[package]
name = "gw2-arbitrage"
version = "0.5.0"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
edition = "2018"

[dependencies]
bincode = "1.2"
colored = "1.9"
csv = "1.1"
flate2 = "1.0"
ordered-float = "1.0"
futures = "0.3"
num-rational = "0.3"
num-traits = { version = "0.2", default-features = false }
rayon = "1.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
