[package]
name = "gw2-arbitrage"
version = "0.6.1"
description = "Finds items in Guild Wars 2 that can be sold on the trading post for a higher price than the cost of crafting the item"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
repository = "https://github.com/t-mw/gw2-arbitrage"
license = "MIT"
edition = "2018"

[dependencies]
bincode = "1.2"
colored = "1.9"
csv = "1.1"
dirs = "3.0"
flate2 = "1.0"
futures = "0.3"
num-rational = "0.3"
num-traits = { version = "0.2", default-features = false }
once_cell = "1.8"
rayon = "1.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
